--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: galli_360_viewer
+name: galli360viewer
 description: A 360 image viewer for gallimaps.
 version: 0.0.1
-homepage: https://gallimaps.com/
+homepage: https://github.com/Gallimaps/galliViewer
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   panorama: ^0.4.1
-  http:
+  http: ^0.13.5
   flutter_svg: ^1.0.3
   device_info_plus: ^8.0.0
 
