--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: galli360viewer
-description: Galli360 is a Flutter package that lets users view and interact with 360 street images from GalliMaps. Users can pan, tilt, and zoom in on images and pin and share locations. Developers can easily add immersive views to their apps with this package.
-version: 0.0.4
+description: Galli360 is a Flutter package that lets users view and interact with 360 street images from GalliMaps. Users can pan, tilt, and zoom in on images and pin and share locations.
+version: 0.0.6
 homepage: https://github.com/Gallimaps/galliViewer
 
 environment:
